--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,27 @@
 blinker==1.9.0
+certifi==2025.1.31
+charset-normalizer==3.4.1
 click==8.1.8
 colorama==0.4.6
+cssbeautifier==1.15.4
+djlint==1.36.4
+EditorConfig==0.17.0
 Flask==3.1.0
+Flask-Login==0.6.3
+Flask-WTF==1.2.2
+idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
+jsbeautifier==1.15.4
+json5==0.10.0
 MarkupSafe==3.0.2
+pathspec==0.12.1
+python-dotenv==1.0.1
+PyYAML==6.0.2
+regex==2024.11.6
+requests==2.32.3
+six==1.17.0
+tqdm==4.67.1
+urllib3==2.3.0
 Werkzeug==3.1.3
+WTForms==3.2.1
