--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+APScheduler==3.11.0
 blinker==1.9.0
 certifi==2025.1.31
 charset-normalizer==3.4.1
@@ -22,6 +23,8 @@ regex==2024.11.6
 requests==2.32.3
 six==1.17.0
 tqdm==4.67.1
+tzdata==2025.2
+tzlocal==5.3.1
 urllib3==2.3.0
 Werkzeug==3.1.3
 WTForms==3.2.1
