--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ colorama==0.4.6
 cssbeautifier==1.15.4
 djlint==1.36.4
 EditorConfig==0.17.0
+et_xmlfile==2.0.0
 Flask==3.1.0
 Flask-Login==0.6.3
 Flask-WTF==1.2.2
@@ -16,8 +17,13 @@ Jinja2==3.1.6
 jsbeautifier==1.15.4
 json5==0.10.0
 MarkupSafe==3.0.2
+numpy==2.2.5
+openpyxl==3.1.5
+pandas==2.2.3
 pathspec==0.12.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+pytz==2025.2
 PyYAML==6.0.2
 regex==2024.11.6
 requests==2.32.3
